Fixed white space below image in 800px and above with line-height:0

--- a/style.css
+++ b/style.css
@@ -134,6 +134,7 @@ body {
     
     .card__image {
         width: 50%;
+        line-height: 0;
     }
 
     .card__content {
